--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -105,6 +105,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
                     {links.map(({ text: text2, href: href2 }) => (
                       <li>
                         <a
+                          data-i18n={text2}
                           class:list={[
                             "first:rounded-t last:rounded-b md:hover:bg-gray-100 hover:text-link dark:hover:text-white dark:hover:bg-gray-700 py-2 px-5 block whitespace-no-wrap",
                             { "aw-link-active": href2 === currentPath },
