--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -27,7 +27,7 @@ const {
 ---
 
 <section
-style="margin-bottom: 7%;"
+style="margin-bottom: 150px;"
   class="md:-mt-[76px] not-prose"
   {...id ? { id } : {}}
   
