--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -5,7 +5,7 @@ import Testimonials from '~/components/widgets/Testimonials.astro';
 import ContactUs from '~/components/widgets/Contact.astro';
 
 const metadata = {
-  title: 'Frquently Asked Questions',
+  title: 'Frequently Asked Questions',
 };
 ---
 
