--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <Hero
     tagline="Accounting Services Singapore"
-    title="BizCom Management"
+    title="BizCom Management Services"
     subtitle="BizCom Management Services Pte Ltd consists of a team of dedicated and dynamic certified accountants"
     videoSrc="/bg2.mp4"
     content='<p class="text-white">BizCom offers a variety of quality and affordable services for small to medium businesses in Singapore</p>'
