--- a/src/components/blog/Pagination.astro
+++ b/src/components/blog/Pagination.astro
@@ -23,11 +23,11 @@ const { prevUrl, nextUrl, prevText = 'Newer posts', nextText = 'Older posts' } =
           href={getPermalink(prevUrl)}
         >
           <Icon name="tabler:chevron-left" class="w-6 h-6" />
-          <p class="ml-2">{prevText}</p>
+          <p class="ml-2" data-i18n={prevText}>{prevText}</p>
         </Button>
 
         <Button variant="tertiary" class={`md:px-3 px-3 ${!nextUrl ? 'invisible' : ''}`} href={getPermalink(nextUrl)}>
-          <span class="mr-2">{nextText}</span>
+          <span class="mr-2" data-i18n={nextText}>{nextText}</span>
           <Icon name="tabler:chevron-right" class="w-6 h-6" />
         </Button>
       </div>
