--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -9,22 +9,23 @@ import { UI } from "astrowind:config";
 
   window.basic_script = true;
   window.loadLanguage = async (lang) => {
-    const response = await fetch(`/locales/${lang}.json`);
+    localStorage.setItem("lang", lang);
+    const locales_src = window.location.origin+'/locales/'+lang+'.json';
+    const response = await fetch(locales_src);
     const messages = await response.json();
 
     document.querySelectorAll("[data-i18n]").forEach(el => {
       const key = el.getAttribute("data-i18n");
       el.textContent = messages[key] || key;
     });
-    const langIcon = lang === 'en' ? 'GB' : lang === 'id' ? 'ID' : lang === 'zh' ? "CN" : "GB";
-    document.getElementById("icon-lang").src = "https://region-api.pages.dev/flags/svg/"+langIcon+".svg";
-    localStorage.setItem("lang", lang);
   };
   function initLanguage() {
     const lang = localStorage.getItem("lang");
     if(lang){
       loadLanguage(lang);
+      document.getElementById("lang").value = lang;    
     }else{
+      document.getElementById("lang").value = "en";
       loadLanguage('en');
     }
   }
@@ -59,8 +60,8 @@ import { UI } from "astrowind:config";
     }
     document.getElementById("logo").src =
       document.documentElement.classList.contains("dark")
-        ? "/src/assets/images/white_logo.png"
-        : "/src/assets/images/logo.png";
+        ? window.location.origin+"/white_logo.png"
+        : window.location.origin+"/logo.png";
   };
   initTheme();
   initLanguage();
@@ -117,8 +118,8 @@ import { UI } from "astrowind:config";
         : "light";
       document.getElementById("logo").src =
         document.documentElement.classList.contains("dark")
-          ? "/src/assets/images/white_logo.png"
-          : "/src/assets/images/logo.png";
+          ? window.location.origin+"/white_logo.png"
+          : window.location.origin+"/logo.png";
       if (document.documentElement.classList.contains("dark")) {
         document.getElementById("header-bg").classList.remove("bg-white");
       } else {
