--- a/src/components/widgets/BlogLatestPosts.astro
+++ b/src/components/widgets/BlogLatestPosts.astro
@@ -45,7 +45,7 @@ const posts = APP_BLOG.isEnabled ? await findLatestPosts({ count }) : [];
               data-i18n={title}
             />
             {APP_BLOG.list.isEnabled && linkText && linkUrl && (
-              <Button variant="link" href={linkUrl}> {linkText} »</Button>
+              <Button variant="link" href={linkUrl} data-i18n={linkText}> {linkText} »</Button>
             )}
           </div>
         )}
