--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -31,25 +31,25 @@ export function getStaticPaths () {
     {
       title: t("business.acumen"),
       description:
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
+        "Empowering businesses with strategic insights, expert guidance, and strong partnerships for sustainable growth and success.",
       icon: "tabler:components",
     },
     {
       title: t("cost.efficiency"),
       description:
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
+        "Delivering cost-effective solutions to enhance value and drive sustainable business success.",
       icon: "tabler:components",
     },
     {
       title: t("industry.expertise"),
       description:
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
+        "Bringing years of experience and deep knowledge to drive innovation across diverse industries and sectors.",
       icon: "tabler:components",
     },
     {
       title: t("professional.advice"),
       description:
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
+        "Expert guidance rooted in industry best practices to help navigate complex business challenges with confidence.",
       icon: "tabler:components",
     },
   ]}
