--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -41,30 +41,30 @@ const t = useTranslations(lang);
     title={t("why.choose.bizcom")}
     subtitle={t("bizcom.service.offering")}
     items={[
-      {
-        title: t("business.acumen"),
-        description:
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
-        icon: "tabler:components",
-      },
-      {
-        title: t("cost.efficiency"),
-        description:
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
-        icon: "tabler:components",
-      },
-      {
-        title: t("industry.expertise"),
-        description:
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
-        icon: "tabler:components",
-      },
-      {
-        title: t("professional.advice"),
-        description:
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.",
-        icon: "tabler:components",
-      },
+      // {
+      //   title: t("business.acumen"),
+      //   description:
+      //     "Empowering businesses with strategic insights, expert guidance, and strong partnerships for sustainable growth and success.",
+      //   icon: "tabler:components",
+      // },
+      // {
+      //   title: t("cost.efficiency"),
+      //   description:
+      //     "Delivering cost-effective solutions to enhance value and drive sustainable business success.",
+      //   icon: "tabler:components",
+      // },
+      // {
+      //   title: t("industry.expertise"),
+      //   description:
+      //     "Bringing years of experience and deep knowledge to drive innovation across diverse industries and sectors.",
+      //   icon: "tabler:components",
+      // },
+      // {
+      //   title: t("professional.advice"),
+      //   description:
+      //     "Expert guidance rooted in industry best practices to help navigate complex business challenges with confidence.",
+      //   icon: "tabler:components",
+      // },
     ]}
   />
 
