--- a/src/components/widgets/BlogLatestPosts.astro
+++ b/src/components/widgets/BlogLatestPosts.astro
@@ -35,26 +35,29 @@ const posts = APP_BLOG.isEnabled ? await findLatestPosts({ count }) : [];
 
 {
   APP_BLOG.isEnabled ? (
-    <WidgetWrapper id={id} isDark={isDark} containerClass={classes?.container as string} bg={bg}>
-      <div class="flex flex-col lg:justify-between lg:flex-row mb-8" style="margin-top:2%">
-        {title && (
-          <div class="md:max-w-sm">
-            <h2
-              class="text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none group font-heading mb-2"
-              set:html={title}
-              data-i18n={title}
-            />
-            {APP_BLOG.list.isEnabled && linkText && linkUrl && (
-              <Button variant="link" href={linkUrl} data-i18n={linkText}> {linkText} »</Button>
-            )}
-          </div>
+  <WidgetWrapper id={id} isDark={isDark} containerClass={classes?.container as string} bg={bg}>
+  <div class="flex flex-col justify-center items-center mb-8" style="margin-top:2%">
+    {title && (
+      <div class="md:max-w-sm text-center">
+        <h2
+          class="text-3xl text-primary font-bold tracking-tight sm:text-4xl sm:leading-none group font-heading mb-2"
+          set:html={title}
+          data-i18n={title}
+        />
+        {APP_BLOG.list.isEnabled && linkText && linkUrl && (
+          <Button variant="link" href={linkUrl} data-i18n={linkText}> {linkText} »</Button>
         )}
-
-        {information && <p data-i18n={information} class="text-muted dark:text-slate-400 lg:text-sm lg:max-w-md" set:html={information} />}
       </div>
+    )}
 
-      <Grid posts={posts} />
-    </WidgetWrapper>
+    {information && <p data-i18n={information} class="text-muted dark:text-slate-400 text-center py-5" set:html={information} />}
+  </div>
+
+  <Grid posts={posts} />
+</WidgetWrapper>
+
+
+
   ) : (
     <Fragment />
   )
